--- a/Java/JAVA基础/4.面向对象.md
+++ b/Java/JAVA基础/4.面向对象.md
@@ -530,12 +530,12 @@ public int method2(int n){
 
 java规定四种权限：private、default、protected、public，用来限制对象对该类成员的访问权限
 
-|  修饰符   | 类内部 | 同一个包 | 不同的包子类 | 同一个工程 |
-| :-------: | :----: | :------: | :----------: | :--------: |
-|  private  |   √    |    ×     |      ×       |     ×      |
-|  default  |   √    |    √     |      ×       |     ×      |
-| protected |   √    |    √     |      √       |     ×      |
-|  public   |   √    |    √     |      √       |     √      |
+|  修饰符   | 类内部 | 同一个包 | 不同的包子类 | 同一个工程+ |
+| :-------: | :----: | :------: | :----------: | :---------: |
+|  private  |   √    |    ×     |      ×       |      ×      |
+|  default  |   √    |    √     |      ×       |      ×      |
+| protected |   √    |    √     |      √       |      ×      |
+|  public   |   √    |    √     |      √       |      √      |
 
 4种权限都可以用来修饰类的内部结构：属性、方法、构造器、内部类
 
@@ -1265,8 +1265,11 @@ public class InterviewTest {
     @Test
     public void test1() {
         Object o1 = true ? new Integer(1) : new Double(2.0);
-        System.out.println(o1);//1.0   三元运算符编译时要求两边同一成一个类型
-        //int先提升成double 然后赋值给o1
+        System.out.println(o1);//1.0   
+        //1.表达式两边值类型不一样,编译自动拆箱为int、double
+        //2.三目运算符要求数据类型一致，编译时int自动提升为double
+        //3.装箱成Double
+        //4.多态：父类的对象，指向子类的引用，即Object类型的对象obj1指向Double对象的引用，Double重写了Object的toString()方法，调用了Double重写后的toString()方法
     }
 
     @Test
